<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MeraBreak</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_digits_person_name">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM\'</string>
    <string name="string_digits_address">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM\'-/0123456789</string>
    <string name="string_digits_contact_no">0123456789</string>
    <string name="string_digits_number_decimal_comma">0123456789.,</string>
    <string name="facebook_app_id">1682365352005674</string>
    <string name="puzzle_size_x_y">{0} x {1}</string>
    <string name="label_ok">OK</string>
    <string name="label_oops">Whoops!</string>
    <string name="label_hurray">Hurray!</string>
    <string name="title_solved">Solved!</string>
    <string name="title_select_tiling">Select tiling</string>
    <string name="title_show_numbers">Show numbers</string>
    <string name="menu_select_image">Select image</string>
    <string name="menu_take_photo">Take photo</string>
    <string name="menu_scramble">Shuffle</string>
    <string name="error_could_not_load_image">Could not load image.</string>
    <string name="error_could_not_load_image_error">Could not load image: {0}</string>
    <string name="error_could_not_create_directory_to_store_photo">Could not create directory to store photo.</string>
    <string name="toast_disabled_expert_mode">Turning on numbers has disabled expert mode.</string>
    <string name="toast_not_enabled_expert_mode">Numbers are off. Expert mode will be enabled when the slidePuzzle is scrambled.</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="categories_title">Categories</string>
    <string name="warning">Something went wrong. Please try again.</string>
    <string name="no_internet">No Internet! Please enable internet access.</string>
    <string name="settings_text">Settings</string>
    <string name="retry_text">Try Again</string>
    <string name="points">Points</string>
    <string name="points_small">points</string>
    <string name="download_alert">Hey Dude, you are downloading challenge by using mobile data. Do not panic, your data charges as applicable.!</string>
    <string name="data_enable">Please enable your mobile data in settings</string>
    <string name="no_offline">This Challenge is not available for offline</string>
    <string name="download_done">Challenge Downloaded</string>
    <string name="about_screen_name">About Us</string>
    <string name="about_fb">Please let us know your feedback at <font fgcolor="#654597">feedback@merabreak.com</font> and we will do our best to bring more fun and more prize_list for you in near future.</string>
    <string name="about_app_ver">App Version :</string>
    <string name="about_text_one">Merabreak is a platform which allows you to use your breaks to participate in bite size challenges and in return win loads of prize_list and awesome deals.</string>
    <string name="about_text_two">Whether you are travelling or at enjoying our vacation or even working you can participate and enjoy while winning points and redeeming them instantly to win some fantastic prize_list!</string>
    <string name="about_text_three">Quiz - There are different types of quizzes including trending topics, Entertainment industry and whatever you can think of . Win points and compete with your friends to win loads of points while testing your knowledge.</string>
    <string name="about_text_four">Jigsaw Puzzles - This is the perfect choice for lovers of JIGSAW puzzles. Every puzzle is unique, solve them and win awesome prize_list.</string>
    <string name="about_text_five">Riddles - Do you want your brain to work so quickly? Heat up it with riddles everyday!</string>
    <string name="about_text_six">Anagrams - It is a fun word game for puzzle lovers.In this game you will be presented with the famous words, but with the letters mixed up - anagrams. Your task is to guess the word letters in the right order, that is, to solve the anagram.</string>
    <string name="about_text_seven">Merabreak brings a unique way of winning while you are on small breaks. Redeeming points can come from mobile recharges or participating in Raffles or redeeming your points in store front which has some exciting gifts to be redeemed.</string>
    <string name="about_text_eight">Memory Game - It is easy to play, in which all of the images are laid face down and two images are flipped face up over each click. The object of the game is to turn over pairs of matching images.</string>
    <string name="account_details_screen_name">Account History</string>
    <string name="user_chal_frag_prob_three">Hey! You have not played any challenge. Play to earn points and win exciting gifts.</string>
    <string name="user_points_frag_prob_three">Hey! There are no points at this time. Play to earn points and win exciting gifts.</string>
    <string name="user_product_frag_prob_three">Hey! You have not bought any products. Play to earn points and buy using them.</string>
    <string name="user_raffle_frag_prob_three">Hey! You have not bought any raffle tickets. Buy them, you will be surprised with what you can win.</string>
    <string name="user_deal_frag_prob_three">Hey! You have not get any deals.</string>
    <string name="valid_till">Valid Till :</string>
    <string name="voucher_code">Voucher Code : </string>
    <string name="voucher">Voucher</string>
    <string name="play">PLAY</string>
    <string name="participate">PARTICIPATE</string>
    <string name="rule">Rules:</string>
    <string name="questions">Questions</string>
    <string name="cha_points">Points</string>
    <string name="time">Time</string>
    <string name="deal_dialog_title">You got this Deal</string>
    <string name="deal_title">Deal Title :</string>
    <string name="deal_code">Deal Code:</string>
    <string name="deal_about">About Deal :</string>
    <string name="deal_terms">Terms And Conditions :</string>
    <string name="deal_dialog_button">Close</string>
    <string name="empty_challenges">Sorry, we couldn’t find any challenges for this category.</string>
    <string name="empty_go_back">GO BACK</string>
    <string name="change_pw_title">Change Password</string>
    <string name="enter_old_password">Please enter Old Password</string>
    <string name="enter_eight_char_pw">Password must be 8 characters long or above</string>
    <string name="pw_not_matched">Confirm Password not matched</string>
    <string name="points_history_title">Point History</string>
    <string name="points_history_empty">Your coins list is empty</string>
    <string name="missed_something">You seem to have missed something!</string>
    <string name="challenge_liked">Thanks a ton! Its good you liked it.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="win_per">Win Percentage : </string>
    <string name="you_won">You are Awesome!</string>
    <string name="you_won_head">You Won</string>
    <string name="dont_wry">Don\'t Worry!</string>
    <string name="another_chance">Don’t give up!</string>
    <string name="better_luck">Better luck next time!</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="uh_oh_failure">Uh oh! You didn\'t get 100%</string>
    <string name="dont_worry">Keep earning points up till replays per challenge.</string>
    <string name="live_cha_answer_received">We Have Received Your Answer</string>
    <string name="live_cha_end">After end of this live Challenge</string>
    <string name="live_cha_reward">Will give you rewards based on correct answers</string>
    <string name="live_cha_thanks">Thank You..!</string>
    <string name="offline_cha_thanks"> Thanks for playing!</string>
    <string name="offline_cha_sync_with_internet">We have received your answers, soon points will be credited to wallet based on correct answers.</string>
    <string name="offline_cha_sync_no_internet">We will get the answers as soon as you are reconnected to internet.</string>
    <string name="replay">Replay</string>
    <string name="done">Done</string>
    <string name="time_up">Time is Up! Better luck next time.</string>
    <string name="ok">OK</string>
    <string name="quit_challenge">Do you want to quit playing this challenge?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_step_questions">This Challenge has zero steps</string>
    <string name="congrats">Congratulations!</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="challenge_completed">You have successfully completed the challenge and earned points. Play more challenges and redeem your points into rewards.</string>
    <string name="right_answers">Right Answers</string>
    <string name="win_percentage">Win Percentage</string>
    <string name="won_points">Won Points</string>
    <string name="got_deal">You got the deal Click Here to know</string>
    <string name="you_can_do_better">You can do better!</string>
    <string name="more_challenges">More Challenges</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_enter_complete_info">Kindly enter complete information for us to know you better.</string>
    <string name="edit_profile_enter_zipcode">Kindly enter valid zip code.</string>
    <string name="some_thing_wrong_pic_upload">Something went wrong while updating picture</string>
    <string name="cannot_create_image_dir">Cannot create merabreak image directory</string>
    <string name="camera_access_title">Hey,For better experience, please give Camera access.</string>
    <string name="camera_access_toast">To use Camera.Go to MeraBreak settings in phone->Apps-> MeraBreak-> permissions-> Give access to Camera!</string>
    <string name="edit_full_name">Full Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_zip">Zip Code</string>
    <string name="edit_location">Location</string>
    <string name="edit_dob">Date Of birth - </string>
    <string name="edit_date">DD</string>
    <string name="edit_month">MM</string>
    <string name="edit_year">YYYY</string>
    <string name="edit_gender">Gender - </string>
    <string name="edit_gender_m">M</string>
    <string name="edit_gender_f">F</string>
    <string name="edit_about">About</string>
    <string name="edit_enable_mobile_data">Use Mobile Data for Downloading Offline Challenges</string>
    <string name="edit_submit">SAVE</string>
    <string name="refer_win_text">The more the merrier! Get extra points on the app for referring friends and family to the app</string>
    <string name="refer_people">Refer Your Contacts</string>
    <string name="refer_or">OR</string>
    <string name="refer_share">Invite Your Friends</string>
    <string name="refer_skip">Skip</string>
    <string name="search_location_use_currennt_loc">Use My Location</string>
    <string name="search_location_generic_words">Please try some more generic words!</string>
    <string name="search_location_no_result">No results found</string>
    <string name="search_location_select_city">Select City :</string>
    <string name="search_location_location_msg1">Location is Disabled</string>
    <string name="search_location_location_msg2">Please enable Location Services from Settings</string>
    <string name="search_location_location_msg3">App > Privacy > Location Services</string>
    <string name="tab_fragment_offline">Play Offline Challenges</string>
    <string name="res_menu_main_my_account">My account</string>
    <string name="res_menu_main_redeem_points">Redeem points</string>
    <string name="res_menu_main_offline_challenges">Offline challenges</string>
    <string name="res_menu_main_sign_out">Sign out</string>
</resources>