<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/linear_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location_no_result"
            android:textColor="#9b9b9b"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_location_generic_words"
            android:textColor="#9b9b9b"
            android:textSize="16sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="1dp"
        android:scrollbars="none"
        android:visibility="gone"></ListView>

    <LinearLayout
        android:id="@+id/linear_location_selector"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/app_bg_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/location"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:text="@string/search_location_use_currennt_loc"
            android:textColor="@color/selected_tab_color"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/location_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_location_selector"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/refer_or"
        android:textColor="@color/app_black" />

    <TextView
        android:id="@+id/location_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_or"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_location_select_city"
        android:textColor="@color/selected_tab_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_city"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/linear_location_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_location_location_msg1"
            android:textColor="#9b9b9b"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/search_location_location_msg2"
            android:textColor="#9b9b9b"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_location_location_msg3"
            android:textColor="#9b9b9b"
            android:textSize="15sp" />

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_spinner"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        wheel:matProg_barColor="#DA3939"
        wheel:matProg_progressIndeterminate="true" />

    <include layout="@layout/loader_layout"/>

</RelativeLayout>