<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/main_sub"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/back_pattern"
        android:orientation="vertical">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/login_logo" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/refer_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_sub"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/refer_win_text"
                android:textColor="@color/selected_tab_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:background="@color/primary_color" />

            <Button
                android:id="@+id/contacts_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/redeem_button"
                android:text="@string/refer_people"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/refer_or"
                android:textColor="@color/selected_tab_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/invite_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/redeem_button"
                android:text="@string/refer_share"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/refer_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/refer_skip"
        android:textColor="#605870"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/merabreak_loader"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

    <include layout="@layout/loader_layout"/>
</RelativeLayout>