<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/primary_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/deal_dialog_title"
                android:textColor="@color/selected_tab_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/deal_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dummy_challenge_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:text="@string/deal_title"
                android:textColor="@color/black_transparent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="..."
                android:textColor="@color/selected_tab_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:text="@string/deal_code"
                android:textColor="@color/black_transparent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deal_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="..."
                android:textStyle="bold"
                android:textColor="@color/selected_tab_color"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:text="@string/deal_about"
                android:textColor="@color/black_transparent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="..."
                android:textColor="@color/selected_tab_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:paddingBottom="3dp"
                android:paddingLeft="8dp"
                android:text="@string/deal_terms"
                android:textColor="@color/black_transparent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deal_tc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="..."
                android:textColor="@color/selected_tab_color"
                android:textSize="12sp" />

            <Button
                android:id="@+id/ok"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:background="@drawable/empty_button"
                android:text="@string/deal_dialog_button"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>